syntax = "proto3";

package apirem;

option go_package = "apirem.v1";

import "device_info.proto";
import "device_status.proto";
import "ir_info.proto";


//---------- Send IR ----------
message SendRawIrRequest {
    string device_id = 1;
    RawIrData ir_data = 2;
}

message SendRawIrResponse {
}

//---------- Receive IR ----------
message ReceiveRawIrRequest {
    string device_id = 1;
}

message ReceiveRawIrResponse {
    RawIrData ir_data = 1;
}

//---------- Get all device information -----------
message GetAllDeviceInfoRequest {
}

message GetAllDeviceInfoResponse {
    repeated DeviceInfo device_info = 1;
}

//----------- Get a device information ----------
message GetDeviceInfoRequest {
    string device_id = 1;
}

message GetDeviceInfoResponse {
    DeviceInfo device_info = 1;
}

//----------- Get a device status ----------
message GetDeviceStatusRequest {
    string device_id = 1;
}

message GetDeviceStatusResponse {
   DeviceStatus device_status = 1;
}

//---------- Is busy -----------
message IsBusyRequest {
    string device_id = 1;
}

message IsBusyResponse {
    bool is_busy = 1;
}

service PiRemService {
    rpc SendRawIr(SendRawIrRequest) returns (SendRawIrResponse) {}
    rpc ReceiveRawIr(ReceiveRawIrRequest) returns (ReceiveRawIrResponse) {}
    rpc GetAllDeviceInfo(GetAllDeviceInfoRequest) returns (GetAllDeviceInfoResponse) {}
    rpc GetDeviceInfo(GetDeviceInfoRequest) returns (GetDeviceInfoResponse) {}
    rpc GetDeviceStatus(GetDeviceStatusRequest) returns (GetDeviceStatusResponse) {}
    rpc IsBusy(IsBusyRequest) returns (IsBusyResponse) {}
}
