syntax = "proto3";

package apirem;

option go_package = "github.com/NaKa2355/pirem/gen/apirem/v1";

message DeviceInfo {
    string id = 1;

    string name = 2;

    int32 buffer_size = 3;
  
    enum ServiceType {
        SERVICE_TYPE_UNSPECIFIED = 0;
        SERVICE_TYPE_SEND = 1;
        SERVICE_TYPE_RECEIVE = 2;
        SERVICE_TYPE_SEND_RECEIVE = 3;
        SERVICE_TYPE_NONE = 4;
    }

    ServiceType service = 4;


    string driver_version = 5;

    string firmware_version = 6;

    //デバイスのタイプ(有線or無線)
    enum DeviceType {
        DEVICE_TYPE_UNSPECIFIED = 0;
        DEVICE_TYPE_WIRED = 1;
        DEVICE_TYPE_WIRELESS = 2;
    }

    DeviceType type = 7;
}